# chimera-web

./: .gitignore  README.md  chimera-web.code-workspace  chimera.code-workspace  prompt.md  tasks.md
.github/workflows/: auto-sync-dev-branches.yml
backend/: .env  .gitgnore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  chat_brabão.md  chat_brabão.txt  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  example.env  pyproject.toml  test_users.json
backend/alembic/: env.py
backend/alembic/versions/: 08be00edc55f_create_relation_user_roles.py  1a96cc08d2cb_iniot.py  76c708bf1b1e_user_role.py  8dec5754cd47_create_role.py  b2ed884d1104_teste.py  e2bbab508787_user.py  e8b4413af5ff_create_user.py  f1656d6b6207_user_role_relation.py
backend/app/: __init__.py  api.py  config.py  main.py  models.py  start.py
backend/app/abs/: repository.py  service.py
backend/app/core/: __init__.py  auth.py  database.py  dependencies.py  exceptions.py  health.py  routes.py  schemas.py  security.py  service.py  types.py  x_service.py
backend/app/core/auth/: dependencies.py  routes.py  schemas.py  service.py
backend/app/core/mixins/: time_stamp_mixin.py
backend/app/core/pagination/: schemas.py
backend/app/core/role/: __init__.py  dependencies.py  exceptions.py  model.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/core/user/: __init__.py  dependencies.py  exceptions.py  model.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/database/: database_manager.py  dependencies.py  exceptions.py
backend/app/database/mixins/: __init__.py  filters_mixin.py  soft_delete_mixin.py
backend/app/tests/: create_test_users.py  test_users.json
backend/app/types/: repository.py  schemas.py  service.py
backend/app/user/: dependencies.py  repository.py  routes.py  schemas.py
backend/app/utils/: schemas.py
backend/app/utils/pagination/: dependencies.py  filters.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: b0790757373e_new_mixins.py
backend/scripts/: start.sh  start_dev.sh
frontend/: Dockerfile  Makefile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
frontend/src/pages/: index.html  login.html
frontend/src/static/js/: auth.js  content-loader.js  main.js  ui.js
nova-estrutura/: docker-compose.override.yml
nova-estrutura/alembic/: env.py
nova-estrutura/alembic/versions/: 536bf0a1429b_user.py
nova-estrutura/app/: config.py  main.py
nova-estrutura/app/core/: lifespan.py  repository.py  security.py  service.py  x_repository.py
nova-estrutura/app/core/auth/: dependencies.py
nova-estrutura/app/core/mixins/: __init__.py  time_stamp.py
(+20 files in other folders)
