[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.12",
    "mypy>=1.15.0",
    "pyjwt[crypto]>=2.10.1",
    "ruff>=0.11.2",
    "sqlalchemy>=2.0.40",
]
